--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+main
+
 # Runtime data
 pids
 *.pid
@@ -71,3 +73,5 @@ typings/
 
 # Serverless directories
 .serverless
+
+.idea
