--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "eslint --fix src",
     "test": "mocha --exit"
   },
-  "keywords": ["celo", "cusd", "blockchain", "ethereum", "nigeria", "africa", "btc"],
+  "keywords": [
+    "celo",
+    "cusd",
+    "blockchain",
+    "ethereum",
+    "nigeria",
+    "africa",
+    "btc"
+  ],
   "author": "Umar Adam",
   "repository": {
     "type": "git",
@@ -21,7 +29,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
