--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "license": "Apache",
   "dependencies": {
+    "@celo/contractkit": "^0.4.18",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "morgan": "^1.10.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "web3": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
